--- a/app/public/views/home/index.html
+++ b/app/public/views/home/index.html
@@ -35,11 +35,11 @@
             </a>
           </div>
 
-          <div class="logo">
-            <a href="/" class="">
-              <img src="/assets/images/logo.png" alt="Logo" title="Logo" />
-            </a>
 
+          <div class="">
+            <h4 class="logo">
+              RePlay
+            </h4>
           </div>
 
         </div>
@@ -52,15 +52,7 @@
             </li>
 
             <li>
-              <a href="/party">Party</a>
-            </li>
-
-            <li>
-              <a href="#">My Events</a>
-            </li>
-
-            <li class="pull-right">
-              <a href="#">A link</a>
+              <a href="/party/room1">Enter Rooom1</a>
             </li>
 
           </ul>
@@ -153,11 +145,11 @@
           </span>
         </div>
         <div class="col-md-4">
-          <a href="#" class="button">
+          <a href="/party/room1" class="button">
             Log in
           </a>
 
-          <a href="#" class="button">
+          <a href="/party/room1" class="button">
             Sign up - <em>for free !</em>
           </a>
         </div>
@@ -168,7 +160,7 @@
 
           <div class="media">
             <div class="media-left">
-              <a href="#">
+              <a href="/party/room1">
                 <i class="fa fa-calendar fa-2x"></i>
               </a>
             </div>
@@ -178,7 +170,7 @@
                 Schedule &amp; Plan
               </h4>
               <p>
-                bbbb baba sbsbs bsbsb
+                Schedule and plan
               </p>
             </div>
           </div>
@@ -189,7 +181,7 @@
 
           <div class="media">
             <div class="media-left">
-              <a href="#">
+              <a href="/party/room1">
                 <i class="fa fa-glass fa-2x"></i>
               </a>
             </div>
@@ -199,7 +191,7 @@
                 Host &amp; Engage
               </h4>
               <p>
-                bbbb baba sbsbs bsbsb
+                Chat and chat again
               </p>
             </div>
           </div>
@@ -210,7 +202,7 @@
 
           <div class="media">
             <div class="media-left">
-              <a href="#">
+              <a href="/party/room1">
                 <i class="fa fa-play fa-2x"></i>
               </a>
             </div>
@@ -234,46 +226,28 @@
 
         <div class="col-md-4 col-sm-6">
           <h3>
-            About us
+            About
           </h3>
 
           <p>
-            Lisol is about robust but simple software designs that work.
-          </p>
-
-          <p>
-            Today Lisol is exploiting opportunities afforded by new developments in database technology to provide rapid application developments, proofs of concept and MVPs on NoSQL databases like <a href="http://www.mongodb.com" target="_new">MongoDB</a> in a true partnership approach.
-          </p>
-
-          <p>
-            We are actively seeking collaborators in this space for joint projects or just for exchange of ideas.
+            First attempt at WebRTC ....
           </p>
         </div>
 
         <div class="col-md-4 col-sm-6">
           <h3>
-            Latest Tweets
+            How to
           </h3>
-
-          <a class="twitter-timeline" href="https://twitter.com/lisolit" data-widget-id="560897658379059202">Tweets by @lisolit</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script> 
-
+          <p>
+            Click to enter Room 1
+          </p>
         </div>
 
         <div class="col-md-3 col-sm-6">
           <h3>
-            Our Contacts
+            Contacts
           </h3>
 
-          <address class="">
-            Old Church Hall,<br />
-            Roche, <br />
-            St Austell,<br />
-            UK<br />
-            Phone: + 44 (0) 1726 891 301<br />
-            Mobile: + 44 (0) 7434 467 492<br />
-            Skype: <br />
-            Email: <a href="#">info [at] lisol [dot] co [dot] uk</a><br />
-          </address>
         </div>
       </div>
 
