--- a/app/public/views/home/party.html
+++ b/app/public/views/home/party.html
@@ -39,10 +39,10 @@
             </a>
           </div>
 
-          <div class="logo">
-            <a href="/" class="">
-              <img src="/assets/images/logo.png" alt="Logo" title="Logo" />
-            </a>
+          <div class="">
+            <h4 class="logo">
+              RePlay
+            </h4>
 
           </div>
 
@@ -51,20 +51,12 @@
         <div class="col-md-7">
 
           <ul id="menu" class="menu list-inline visible-sm-inline-block visible-md-inline-block visible-lg-inline-block">
-            <li class="current">
+            <li>
               <a href="/">Home</a>
             </li>
 
-            <li>
-              <a href="/party">Party</a>
-            </li>
-
-            <li>
-              <a href="#">My Events</a>
-            </li>
-
-            <li class="pull-right">
-              <a href="#">A link</a>
+            <li class="current">
+              <a href="/party/room1">Enter Room1</a>
             </li>
 
           </ul>
